[vcs-log] keep recent filters in a map by filter name